Sat Sep  7 23:36:06 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/userguide.sgml:
	- Fix a few more spelling errors.

Fri Sep  6 17:23:00 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/token.c:
	- Ensure proc_name parameter to message handlers is never NULL.
	  This matches Sybase's behavior, and prevents crashes in correct
	  handlers that don't expect NULLs here (such as the example handlers
	  in Sybase's documentation).
	* src/dblib/dblib.c:
	- Fix declarations of global handlers.
	- Pass the line number through to the message handler.

Fri Sep  6 15:54:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dblib.c:
	- remove bogus dberrhandler() and dbmsghandler()

Fri Sep  6 13:16:46 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c src/tds/write.c:
	- work if not blocking socket (call always select)
	- workaround for bug in FreeBSD compiler that result in code dump

Fri Sep  6 09:22:47 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/t0001.c:
	- fix text values retrieve and SQLGetData

Fri Sep  6 08:33:37 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fix column display for int (too short)
	- use sp_datatype_info for retrieve odbc information
	* src/odbc/unittests/t0001.c: use temporary table for test

Thu Sep  5 23:23:50 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt:
	- bring some entries up to date
	- change dbfreelogin to dbloginfree

Thu Sep  5 22:42:50 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/CodingStyle doc/faq.html doc/getting_started.txt:
	* doc/userguide.sgml:
	- fix some more spelling errors.

Thu Sep  5 18:16:05 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c:	Applied Eric's ML patch of 9 September:
	- added a -d option which only turns on the dumping if selected.
	- malloc() bug  sometimes caused last character of a tablename to be truncated.
